# Praca-Inzynierka

./: .gitignore
API/: pyproject.toml
API/alembic/: env.py
API/alembic/versions/: 041b9a01ff73_initial_commit.py  1f5640de49b7_modify_password_and_salt_types.py  263ed029d6fa_modify_back_password_and_salt_types.py  2b9f7bc5fccc_phase_attribute_typo.py
API/app/: __init__.py  config.py  models.py  run.py  supporting_functions.py
API/app/services/: database.py  password_operations.py
API/app/tests/integration/: conftest.py
API/app/views/: phase.py  scenario.py  user.py
API/tests/integration/: conftest.py  test_create_user.py  test_phase.py  test_scenario.py  test_user.py
API/tests/unit/: test_password_operations.py  test_supporting_functions.py
DataGathering/: main.py
GUI/LeagueOfLegendsScenarioCreator/: App.axaml  App.axaml.cs  LeagueOfLegendsScenarioCreator.csproj  LeagueOfLegendsScenarioCreator.sln  Program.cs  ViewLocator.cs
GUI/LeagueOfLegendsScenarioCreator/Converters/: EmailFormatConverter.cs
GUI/LeagueOfLegendsScenarioCreator/CustomExceptions/: NotFoundException.cs  ServiceUnavailableException.cs  UnauthorizedException.cs  UserConflictException.cs
GUI/LeagueOfLegendsScenarioCreator/Models/: ImageLoader.cs  Phase.cs  PhaseProjector.cs  (+2 more)
GUI/LeagueOfLegendsScenarioMaker/: App.axaml  App.axaml.cs  LeagueOfLegendsScenarioMaker.csproj  LeagueOfLegendsScenarioMaker.sln  Program.cs  ViewLocator.cs
GUI/ProjectUnitTests/: ConvertersUnitTests.cs  CustomExceptionsUnitTests.cs  ModelsUnitTests.cs  ProjectUnitTests.csproj  ViewModelsUnitTests.cs
RecommendationSystem/: KNNRecommendations.py  __init__.py  data_constants.py  main.py
RecommendationSystem/Models/: CosineSim.py  KNNRecommendations.py
RecommendationSystem/RecomAlgs/: CosineSim.py  KNNRecommendations.py  occurance_counter.py
RecommendationSystem/tests/: test_recommendation.py
(+36 files in other folders)
