[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["SzymonJanowski <SzymonJanowski01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"

sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
uviconr = "^0.22.0"
fastapi = "^0.95.0"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"
mypy = "*"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-postgresql = "^5.0.0"
psycopg = "^3.1.9"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files ="test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
check_untyped_defs = true
namespace_packages = true
plugins = "sqlalchemy.ext.mypy.plugin"
pretty = true
show_error_context = true
exclude = ".venv"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "backoff.*",
  "opentracing.*",
]
ignore_missing_imports = true
